--- a/index.html
+++ b/index.html
@@ -70,53 +70,43 @@
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mt-5">
-                    <h2 class="p-3 text-center colorCeleste">
-                        ¿QUIEN SOY?
-                    </h2>
+                <div class="card mb-3 bgColor p-5 " style="max-width: 90%; margin: auto;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="./Media/fotos/Persona.jpg" width="300px" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h3 class="card-title colorCeleste">¿Quién soy?</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sequi unde praesentium tempora magnam blanditiis veritatis aperiam, vitae cumque autem mollitia, a labore. Beatae doloribus quod esse consequatur hic
+                                    molestias ex, voluptatem delectus harum soluta deserunt maiores laborum debitis assumenda labore cumque accusamus perspiciatis porro quas, obcaecati culpa excepturi? Ipsa repudiandae, possimus voluptas similique eaque
+                                    impedit dolorem. Pariatur id laboriosam velit, fuga commodi nihil laudantium sunt dolor ducimus ex doloremque aut impedit! Earum natus sapiente delectus cum a, unde quod.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-2 p-3">
-                    <img src="./Media/fotos/Persona.jpg" width="200px" alt="">
-                </div>
-                <div class="col-10 p-3">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quo qui. Ipsa, delectus laudantium. Alias totam vitae, et at molestiae accusamus esse asperiores dicta eveniet explicabo earum? Debitis mollitia non tempore tempora consectetur voluptatem
-                        modi fuga quae sit neque accusamus architecto eveniet saepe culpa, harum officia officiis esse libero. Laboriosam, consequuntur nihil perferendis, corrupti praesentium molestias qui id facilis, ipsum delectus suscipit consectetur!
-                        Doloremque unde possimus amet non, suscipit recusandae quae vitae distinctio maiores molestiae blanditiis aliquam praesentium velit est.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mt-5">
-                    <h2 class="p-3 text-center colorCeleste">
-                        ESTILO DE VIDA
-                    </h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2 p-3">
-                    <img src="./Media/fotos/Comida Saludable.jpg" width="200px" alt="">
-                </div>
-                <div class="col-10 p-3">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quo qui. Ipsa, delectus laudantium. Alias totam vitae, et at molestiae accusamus esse asperiores dicta eveniet explicabo earum? Debitis mollitia non tempore tempora consectetur voluptatem
-                        modi fuga quae sit neque accusamus architecto eveniet saepe culpa, harum officia officiis esse libero. Laboriosam, consequuntur nihil perferendis, corrupti praesentium molestias qui id facilis, ipsum delectus suscipit consectetur!
-                        Doloremque unde possimus amet non, suscipit recusandae quae vitae distinctio maiores molestiae blanditiis aliquam praesentium velit est.
-                    </p>
-                </div>
-            </div>
+                <div class="card mb-3 bgColor p-5" style="max-width: 90%; margin: auto;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="./Media/fotos/Comida Saludable.jpg" width="300px" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h3 class="card-title colorCeleste">Vida Saludable</h3>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae in soluta perspiciatis exercitationem eum, necessitatibus harum excepturi ratione adipisci natus delectus debitis assumenda quos nulla tempora consequuntur
+                                    voluptates beatae illum odit dolor modi cupiditate hic! Illo deleniti delectus repellendus sequi.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A debitis, ea quibusdam omnis perferendis error itaque natus ipsum, alias recusandae aperiam ipsam enim, cumque consequatur repellendus quas numquam. Eos, sapiente?</p>
+                            </div>
+                        </div>
+                    </div>
         </section>
     </main>
     <footer>
